# aws-etl-pipeline

./: .gitignore  main.py  pyproject.toml
config/: config.yaml
data_ingestion/support_tickets/: ticket_ingestion.py
notebook/: logs_ingestion.ipynb  ticket_ingestion.ipynb
utils/: config_loader.py  date_utils.py  db_utils.py  logger.py  s3_utils.py
